--- a/src/style/botconfig.css
+++ b/src/style/botconfig.css
@@ -4,22 +4,34 @@
   /* #region ##  Layout  ## */
 
   /* Layout side panels */
-  --layout-sidebar-min: 14rem;
-  --layout-sidebar-gap: 2rem;
   --layout-side-padding-min: 1rem;
   --layout-side-padding: max(var(--layout-side-padding-min),
       calc((100vw - 1440px + (2rem)) / 2));
+  --layout-sidebar-min: 14rem;
 
-  /* Layout main content */
-  --layout-full-width: calc(100vw - 2 * var(--layout-side-padding));
-  --layout-max-width: 1440px;
-  --layout-content-width: max(var(--layout-max-width), 100vw);
   --layout-content-min: 31rem;
   --layout-content-max: 48rem;
+  --layout-full-width: calc(100vw - 2 * var(--layout-side-padding));
+  --layout-max-width: 1440px;
+  --layout-actual-width: max(var(--layout-max-width), 100vw);
 
-  /* Border widths/radius */
+  --menu-width-max: 1024px;
+  --menu-height-min: 40px;
+
+  /* Padding on the sides of the page content */
+  --layout-spacing: 1rem;
+
+  /* Padding between elements */
+  --layout-gap: 1rem;
+
+  /* --layout-side-gap: 2rem; */
+
+  --header-height: 72px;
   --standard-border-radius: 5px;
   --border-width: 1px;
+  --border-size: 1px;
+
+  --line-height: 1rem;
 
   /* #endregion */
 
@@ -27,7 +39,7 @@
 
   --sans-font: -apple-system, "Avenir Next", Avenir,
     "Nimbus Sans L", Roboto, "Noto Sans", "Segoe UI";
-  --mono-font: "Fira Code", "FiraCode Nerd Font Mono", Consolas, Menlo, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
+  --mono-font: "Fira Code", "FiraCode Nerd Font Mono", Menlo, Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
 
   /* #endregion */
 
@@ -49,6 +61,7 @@
   --preformatted: #444;
   --marked: #ffdd33;
   --disabled: #efefef;
+  --text-hp: #d7d7d7;
 
   /* Tree View Colors */
   --tree-bg: rgba(241, 241, 241, 0.8);
@@ -263,7 +276,6 @@ p {
 
 body>.page {
   margin: 0;
-  position: relative;
 }
 
 body>.page::before {
@@ -292,76 +304,87 @@ body>.page::before {
 
 /* Make the header bg full width, but the content inline with body */
 header {
-  background-color: #18191b;
-  border-bottom: var(--border-width) solid var(--text-light);
-  margin-bottom: 1rem;
   max-width: 100vw;
+  background-color: var(--bg-header);
 
-  display: flex;
-  flex-direction: column;
+  /* Gap before page content. */
+  margin-bottom: var(--layout-spacing);
+  border-bottom: #3f3f3f solid var(--border-size);
 }
 
 header>.container {
-  position: relative;
+  min-height: var(--header-height);
+
+  /* Keep width as wide as with page content. */
+  padding-left: var(--layout-side-padding);
+  padding-right: var(--layout-side-padding);
+
+  /* font-size: var(--text-sz-l); */
+
   display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+
+/* SPT Logo container */
+.container>.logo {
+  /* Keeps this all the way to the left side. */
+  justify-self: start;
   align-items: center;
 }
 
-header>.container::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+.logo>img {
+  vertical-align: middle;
+  height: 40px;
 }
 
-.container>.brand {
-  margin-left: 1rem;
-  margin-right: auto;
-  align-self: flex-start;
-  justify-self: flex-start;
-}
-
-/* Wrapper containing the open/load buttons */
-.container>.end {
-  margin-right: 1rem;
-  margin-left: auto;
+/* Hamburger button */
+.container>.nav_end {
+  justify-self: end;
   align-items: center;
 }
 
 .container>.nav {
-  margin: 0 auto;
-  height: 64px;
-  min-width: 40rem;
-  border: yellow dashed 0.5px;
+
+  max-width: var(--menu-width-max);
+  min-height: var(--menu-height-min);
+
+  color: var(--);
+  font-family: monospace;
 
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+  /* justify-content: space-between; */
   align-items: center;
-  gap: 8px;
 }
 
-/* -- Dropdown menu w/ tabs */
-/* 
-
-  mdn-dropdown {
-    display: contents;
-  }
-  mdn-dropdown:not([loaded],:focus-within) [slot="dropdown"] {
-    display: none;
-  }
- */
-
-header button {
-
-  padding: 0.5rem;
-  background-color: inherit;
+.menubtn {
   border: none;
-  --font-family: Menlo, Roboto Mono, monospace;
-  box-shadow: none;
+  border-bottom: #292828 solid 1px;
+
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+
+  background-color: inherit;
 }
+
+/* .arrow {
+  border: solid #fff;
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+  padding: 3px;
+}
+
+.up {
+  transform: rotate(-135deg);
+  -webkit-transform: rotate(-135deg);
+}
+
+.down {
+  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+} */
 
 /* #endregion */
 
@@ -369,7 +392,8 @@ header button {
 
 /* Content container */
 main {
-  margin: 0 auto;
+  padding-left: max(var(--layout-side-padding), var(--layout-side-padding-min));
+  padding-right: max(var(--layout-side-padding), var(--layout-side-padding-min));
   min-height: 100vh;
   /* max-width: calc(100vw - 2rem); */
   /* max-width: 1400px; */
@@ -405,128 +429,74 @@ code {
 
 /* #endregion */
 
+/* #region ---  <aside>  --- */
 
+/* The left-hand panel of main area */
+aside {
+  max-width: 25rem;
+  padding: var(--layout-gap);
+  border-left: var(--bg-accent) solid 0.5px;
+  font-size: var(--text-sz-l);
+}
 
+.stack {
+  display: inline-flex;
+  flex-direction: column;
+  gap: var(--layout-spacing);
+}
 
-/* #region ---  Tree View  --- */
+.sideNav {
+  /* margin: 0 auto; */
+  display: flex;
+  flex-direction: column;
+  gap: 0.1rem;
+}
 
-section>div.treeView {
-  display: block;
-  margin-top: 2rem;
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
-  padding-right: 1rem;
+/* Aside buttons */
+.sideLink {
+  margin: 0;
+  font-size: var(--text-sz-xl);
+  border: var(--bg-accent) solid 0.5px;
+  padding: 0.5rem 1rem;
+  display: inline-flex;
+  gap: 1rem;
+  align-items: center;
+  background-color: var(--bg);
+}
+
+aside button:hover {
+  /* background-color: rgb(51, 51, 51); */
   background-color: var(--bg-mdn-accent);
-  color: var(--tree-text);
-  max-width: fit-content;
 }
 
-.tree {
-  padding-left: 0;
-  --spacing: 1.5rem;
-  --radius: 10px;
-  --tree-border: var(--text-light);
-  --tree-caret: #696;
-  --tree-caret-last: #656;
+.sideLink img {
+  width: 48px;
+  height: 48px;
+  background-color: var(--bg-accent);
 }
 
-.tree li {
-  display: block;
-  /* Makes the magic happen. (No circles without it) */
-  position: relative;
-  /* Old padding left calc( ... -2px). Not sure why but dont need it anymore */
-  padding-left: calc(2 * var(--spacing) - var(--radius) - 0px);
+.sideLink span {
+  color: #bcbcbc;
+  font-family: monospace;
 }
 
-.tree img {
-  vertical-align: middle;
+.stack>.tip {
+  line-height: calc(2 * var(--line-height));
 }
 
-/* Spaces every <ul> after the root to the right.
-Creates for a visible path to connect the nodes */
-.tree ul {
-  margin-left: calc(var(--radius) - var(--spacing));
-  padding-left: 0;
-  /* MAGIC PROPERTY: for height spacing the list */
-  padding-top: 5px;
-  padding-bottom: 5px;
+aside textarea {
+  min-height: 6rem;
+  font-size: var(--text-sz-m);
+  border: var(--bg-accent) solid 0.5px;
+  min-width: 100%;
 }
 
-/* Connects path to outer list-items */
-.tree ul li {
-  border-left: 2px solid var(--tree-border);
+.muted {
+  color: var(--text-light);
 }
 
-/* Gets rid of little hanging border at the last item of each list */
-.tree ul li:last-child {
-  border-color: transparent;
-}
+/* #endregion */
 
-/* Creates a line-path connecting all list-items */
-.tree ul li::before {
-  content: '';
-  display: block;
-  position: absolute;
-  top: calc(var(--spacing) / -2);
-  left: -2px;
-  width: calc(var(--spacing) + 1px);
-  height: calc(var(--spacing) + 1px);
-  border: solid var(--tree-border);
-  border-width: 0 0 2px 2px;
-}
-
-.tree summary {
-  display: block;
-  cursor: pointer;
-  padding-left: 4px;
-}
-
-.tree summary::marker,
-.tree summary::-webkit-details-marker {
-  display: none;
-}
-
-.tree summary:focus {
-  /* outline: none; */
-  /* background-color: rgba(60, 60, 60, 0.2); */
-  background: linear-gradient(90deg, rgba(30, 30, 30, 0.6), rgba(42, 42, 42, 0.4));
-}
-
-/* Create a round shape before each summary,
-and after each <li> */
-.tree li::after,
-.tree summary::before {
-  content: '';
-  display: block;
-  position: absolute;
-  top: calc(var(--spacing) / 2 - var(--radius));
-  left: calc(var(--spacing) - var(--radius) - 1px);
-  width: calc(2 * var(--radius));
-  height: calc(2 * var(--radius));
-  border-radius: 50%;
-
-  background-repeat: no-repeat;
-  background-position: 0px 0px;
-
-  /* NODE background color & img */
-  background: var(--img-tree-node);
-  /* background-color: var(--text); */
-  background-color: var(--tree-text);
-}
-
-/* Adds a caret (+) to each list-item that contains a details element. */
-.tree summary::before {
-  z-index: 1;
-  background: var(--tree-caret) var(--img-tree-open);
-}
-
-/* Changes caret to (-) when list-item is open */
-.tree details[open]>summary::before {
-  /* background: var(--img-tree-close); */
-  background-position: calc(-2 * var(--radius)) 0;
-}
-
-/* #endregion Tree View */
 
 /* #region ---  Card Panel  --- */
 
@@ -598,6 +568,148 @@ section>.card_panel {
   width: 128px;
   height: 128px;
   background-color: rgba(16, 16, 16, 0.6);
+}
+
+/* #endregion */
+
+
+/* #region ---  @media desktop (half-screen)  --- */
+
+/* Half full-screen size (1440p) */
+@media only screen and (max-width: 1080px) {
+  header {
+    margin-bottom: 0;
+  }
+
+  header>.container {
+    font-size: var(--text-sz-m);
+    min-height: 56px;
+  }
+
+  header svg {
+    height: 48px;
+    width: 48px;
+  }
+
+  .logo>img {
+    height: 36px;
+  }
+
+  .nav,
+  .nav_end {
+    max-height: 48px;
+  }
+
+  #nav_profile,
+  #nav_loot,
+  #nav_equipment {
+    display: none;
+  }
+
+  .arrow {
+    display: none;
+  }
+
+  .eye_candy img {
+    display: none;
+  }
+
+  h1 {
+    font-size: var(--text-h1-m);
+  }
+
+  h2 {
+    font-size: var(--text-h2-m);
+  }
+
+  h3 {
+    font-size: var(--text-h3-m);
+  }
+
+  h4 {
+    font-size: var(--text-h4-m);
+  }
+
+  aside {
+    max-width: 15rem;
+    font-size: var(--text-sz-s);
+  }
+
+  section {
+    font-size: var(--text-sz-m);
+  }
+
+  ul,
+  li,
+  p {
+    padding: 0;
+    margin: 0;
+  }
+
+  .sideNav img {
+    width: 32px;
+    height: 32px;
+  }
+
+  img.eye_candy {
+    display: none;
+  }
+
+  .sideLink {
+    font-size: var(--text-sz-m);
+    padding: 0.25rem 0.25rem;
+  }
+
+  code {
+    font-size: var(--text-sz-s);
+  }
+
+  /* Hotkey tip formatting */
+  .kbd {
+    font-size: var(--text-sz-xs);
+    padding-top: 0;
+    line-height: 0.5rem;
+  }
+}
+
+/* #endregion */
+
+/* #region @media - Smarphones */
+
+/* Tablet / Smarphone screen size(s) */
+@media only screen and (max-width: 750px) {
+
+  .container {
+    padding: 0;
+  }
+
+  .logo {
+    padding: 0;
+    justify-self: start;
+  }
+
+  #nav_globals,
+  #nav_ai {
+    display: none;
+  }
+
+  .end {
+    justify-self: end;
+  }
+
+  .info_block img,
+  img.eye_candy {
+    display: none;
+  }
+
+  section {
+    padding: 0;
+    font-size: var(--text-sz-s);
+  }
+
+  aside {
+    display: none;
+  }
 }
 
 /* #endregion */
