--- a/src/style/index.css
+++ b/src/style/index.css
@@ -4,17 +4,17 @@
   /* #region ##  Layout  ## */
 
   --layout-side-padding-min: 1rem;
-  --layout-side-padding: max(var(--layout-side-padding-min),
-      calc((100vw - 1440px + (2rem)) / 2));
-  --layout-sidebar-min: 14rem;
+  --layout-max-width: 1400px;
 
-  --layout-content-min: 31rem;
-  --layout-content-max: 48rem;
-  --layout-full-width: calc(100vw - 2 * var(--layout-side-padding));
-  --layout-max-width: 1440px;
-  --layout-actual-width: max(var(--layout-max-width), 100vw);
+  /* Sets side padding to 1rem if the page is resized smaller 
+     than --layout-max-width. */
+  --layout-side-padding: max(var(--layout-side-padding-min),
+      calc((100vw - var(--layout-max-width) + (2rem)) / 2));
+
+  --layout-actual-width: calc(100vw - 2 * var(--layout-side-padding));
 
   --menu-width-max: 1024px;
+  --menu-width-min: 600px;
   --menu-height-min: 40px;
 
   /* Padding on the sides of the page content */
@@ -23,13 +23,10 @@
   /* Padding between elements */
   --layout-gap: 1rem;
 
-  /* --layout-side-gap: 2rem; */
-
   --header-height: 72px;
   --standard-border-radius: 5px;
   --border-width: 1px;
   --border-size: 1px;
-
   --line-height: 1rem;
 
   /* #endregion */
@@ -86,9 +83,9 @@
   --text-h1-l: 2.5rem;
   --text-h2-l: 2rem;
   --text-h3-l: 1.5rem;
-  --text-h4-l: 1.25rem;
+  --text-h4-l: 1.3rem;
 
-  --text-h1-m: 2rem;
+  --text-h1-m: 1.75rem;
   --text-h2-m: 1.5rem;
   --text-h3-m: 1.2rem;
   --text-h4-m: 1.1rem;
@@ -97,7 +94,7 @@
   --text-sz-xl: 1.25rem;
   --text-sz-l: 1.15rem;
   --text-sz-m: 1rem;
-  --text-sz-s: 0.9rem;
+  --text-sz-s: 0.875rem;
   --text-sz-xs: 0.75rem;
 
   /* #endregion */
@@ -202,9 +199,19 @@ progress {
   -moz-appearance: none;
 }
 
+pre {
+  overflow: auto;
+}
+
+/* Embedded code blocks */
+code {
+  color: var(--marked);
+  font-family: var(--mono-font);
+  font-size: var(--text-sz-l);
+}
+
 details {
   margin: 0;
-  padding: 0;
 }
 
 article,
@@ -255,12 +262,10 @@ h1 {
 
 h2 {
   font-size: var(--text-h2-l);
-  /* margin-top: 3rem; */
 }
 
 h3 {
   font-size: var(--text-h3-l);
-  /* margin-top: 3rem; */
 }
 
 h4 {
@@ -277,7 +282,6 @@ p {
 }
 
 /* #endregion */
-
 
 
 /* #region ---  Page Layout  --- */
@@ -308,29 +312,28 @@ body>.page::before {
 
 /* Makes the header bg full width */
 header {
+  position: relative;
   max-width: 100vw;
-  min-height: var(--header-height);
   background-color: var(--bg-header);
 
   /* Gap before page content. */
   margin-bottom: var(--layout-spacing);
-  border-bottom: var(--border-size) solid var(--menu-border);
+  border-bottom: #2f2f2f solid var(--border-size);
 }
 
 /* Container for the nav menu, logo, and hamburger menu */
 header>.container {
   /* Keep width as wide as with page content. */
-  padding-left: max(var(--layout-side-padding), var(--layout-side-padding-min));
-  padding-right: max(var(--layout-side-padding), var(--layout-side-padding-min));
-
+  padding-left: var(--layout-side-padding);
+  padding-right: var(--layout-side-padding);
+  height: var(--header-height);
   display: flex;
   align-items: center;
+  justify-content: space-between;
 }
 
-/* SPT Logo container */
-.container>.logo {
-  /* Keeps this all the way to the left side. */
-  margin-right: auto;
+.logo {
+  padding-left: var(--layout-spacing);
 }
 
 .logo>img {
@@ -339,16 +342,12 @@ header>.container {
 
 /* Hamburger button */
 .container>.nav_end {
-  /* Space this all the way to the right. */
-  margin-left: auto;
+  display: flex;
+  flex-direction: row;
   align-items: center;
 }
 
 .container>.nav {
-  margin: 0 auto;
-  /* padding: calc(var(--layout-spacing)/2); */
-
-  border: yellow dashed 0.5px;
   max-width: var(--menu-width-max);
   min-height: var(--menu-height-min);
 
@@ -357,7 +356,6 @@ header>.container {
   justify-content: space-evenly;
   align-items: center;
   gap: var(--layout-spacing);
-
 }
 
 /* blue tab color mdn #072446 */
@@ -368,16 +366,6 @@ header>.container {
   display: inline-block;
   padding: 3px;
 }
-
-/* .right {
-  transform: rotate(-45deg);
-  -webkit-transform: rotate(-45deg);
-}
-
-.left {
-  transform: rotate(135deg);
-  -webkit-transform: rotate(135deg);
-} */
 
 .up {
   transform: rotate(-135deg);
@@ -402,8 +390,16 @@ header>.container {
 
 .menubtn {
   background-color: inherit;
+  word-wrap: nowrap;
+  font-size: 16px;
+  font-family: var(--mono-font);
+  color: var(--text-hp);
   border: none;
   box-shadow: none;
+}
+
+.menubtn:hover {
+  background-color: var(--bg-accent);
 }
 
 
@@ -418,42 +414,12 @@ header>.container {
 
 /* Content container */
 main {
-  /* margin: 0 auto; */
   padding-left: max(var(--layout-side-padding), var(--layout-side-padding-min));
   padding-right: max(var(--layout-side-padding), var(--layout-side-padding-min));
-  min-height: 100vh;
-  /* max-width: calc(100vw - 2rem); */
-  /* max-width: 1400px; */
+  min-height: 80vh;
   position: relative;
   display: flex;
   flex-wrap: nowrap;
-}
-
-main::before {
-  /* Required for pseudo elements */
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-
-  /* background-image: url('../assets/images/tarkov/hideout-desk.jpg'); */
-  opacity: 0.05;
-  z-index: -1;
-}
-
-pre {
-  overflow: auto;
-  color: var(--preformatted);
-}
-
-/* Embedded code blocks */
-code {
-  color: var(--marked);
-  font-family: var(--mono-font);
-  font-size: var(--text-sz-l);
-  padding: 0;
 }
 
 /* background-color: #181818;
@@ -520,9 +486,9 @@ aside button:hover {
 }
 
 aside textarea {
-  min-height: 6rem;
   font-size: var(--text-sz-m);
   border: var(--bg-accent) solid 0.5px;
+  min-height: 4rem;
   min-width: 100%;
 }
 
@@ -636,30 +602,39 @@ footer {
 /* #region ---  @media desktop (half-screen)  --- */
 
 /* Half full-screen size (1440p) */
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 1080px) {
+
+  header {
+    margin-bottom: 0;
+  }
+
   header>.container {
     font-size: var(--text-sz-m);
+    min-height: 56px;
+  }
+
+  header svg {
+    height: 48px;
+    width: 48px;
   }
 
   .logo>img {
-    max-height: 48px;
+    height: 36px;
   }
 
   .nav,
-  .nav_end,
-  .logo>img {
+  .nav_end {
     max-height: 48px;
   }
 
-  .menubtn,
-  .arrow {
+  #nav_profile,
+  #nav_loot,
+  #nav_equipment {
     display: none;
   }
 
-  main {
-    /* max-width: calc(100vw - 2rem); */
-    margin-left: 0;
-    margin-right: 0;
+  .arrow {
+    display: none;
   }
 
   .eye_candy img {
@@ -684,12 +659,18 @@ footer {
 
   aside {
     max-width: 15rem;
-    font-size: var(--text-sz-m);
+    font-size: var(--text-sz-s);
   }
 
   section {
-    margin: 0 auto;
     font-size: var(--text-sz-m);
+  }
+
+  ul,
+  li,
+  p {
+    padding: 0;
+    margin: 0;
   }
 
   .sideNav img {
@@ -702,7 +683,8 @@ footer {
   }
 
   .sideLink {
-    font-size: var(--text-sz-l);
+    font-size: var(--text-sz-m);
+    padding: 0.25rem 0.25rem;
   }
 
   code {
@@ -711,10 +693,9 @@ footer {
 
   /* Hotkey tip formatting */
   .kbd {
-    border-bottom: 2px solid var(--preformatted);
-    font-size: 0.8rem;
+    font-size: var(--text-sz-xs);
     padding-top: 0;
-    line-height: 2;
+    line-height: 0.5rem;
   }
 }
 
@@ -723,34 +704,33 @@ footer {
 /* #region @media - Smarphones */
 
 /* Tablet / Smarphone screen size(s) */
-@media only screen and (max-width: 720px) {
+@media only screen and (max-width: 750px) {
 
-  textarea,
-  select,
-  input {
-    width: 100%;
+  .container {
+    padding: 0;
   }
 
-  .brand {
-    display: hidden;
+  .logo {
+    padding: 0;
+    justify-self: start;
   }
 
-  header>.container .nav {
+  #nav_globals,
+  #nav_ai {
     display: none;
-    width: 100%;
   }
 
+  .end {
+    justify-self: end;
+  }
+
+  .info_block img,
   img.eye_candy {
     display: none;
   }
 
-  .treeView *,
-  .tree * {
-    display: none;
-  }
-
-  aside,
   section {
+    padding: 0;
     font-size: var(--text-sz-s);
   }
 
